Style: Added bullet spacing on giving how-to as well as fixed screen sizing issue with how-to section

--- a/css/uw-module.dev.css
+++ b/css/uw-module.dev.css
@@ -312,8 +312,10 @@
     margin-top: 20px;
   }
   .uw-module-body div.give-module div.mod-give-wrapper div.mod-give-container div.giving-mod-how-to {
+    top: 0;
+    right: 0;
     display: inline-block;
-    max-width: 550px;
+    max-width: 430px;
     position: absolute;
     margin-top: 100px;
     margin-left: 50px;
@@ -329,6 +331,9 @@
   }
   .uw-module-body div.give-module div.mod-give-wrapper div.mod-give-container div.giving-mod-how-to ul {
     font-size: 16px;
+  }
+  .uw-module-body div.give-module div.mod-give-wrapper div.mod-give-container div.giving-mod-how-to ul li {
+    margin-bottom: 16px;
   }
   .uw-module-body div.give-module:before,
   .uw-module-body div.give-module:after {
