--- a/less/uw-module.less
+++ b/less/uw-module.less
@@ -312,8 +312,10 @@
 						}
 					}
 					div.giving-mod-how-to{
+						top: 0;
+    					right: 0;
 						display:inline-block;
-						max-width: 550px;
+						max-width: 430px;
 						position: absolute;
 						margin-top: 100px;
 		    			margin-left: 50px;
@@ -328,6 +330,9 @@
 						}
 						ul {
 							font-size: 16px;
+							li {
+								margin-bottom: 16px;
+							}
 						}
 					}
 				}
